# alpha-os

./: .dockerignore  .env.loal  .gitignore  .rules  AI_CHANGELOG.md  CHECK_AND_FIX_POSITIONS.sql  COMPLETE_DATABASE_SETUP.sql  DATABASE_MT5_SYNC_UPDATE.md  DEVELOPMENT.md  DOCS_INDEX.md  Dockerfile  OPTIMIZATION_PLAN.md  OPTIMIZED_DATABASE_SETUP.sql  PHASE5_ROADMAP.md  PROJECT_CHANGELOG.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY_ZH.md  Pivot Trend Signals.pine  QUICK_FIX.md  README.md  SET_INITIAL_BALANCE.sql  TODO.md  TODO_restore.md  deploy_frontend.sh  deploy_local.sh  deploy_orb.sh  deploy_service.sh  dev.sh  docker-compose.yml  fetch_training_data.sh  implementation_plan.md  init_db.py  inspect_features.py  next.config.ts  package-lock.json  package.json  pyproject.toml  run_local_bridge.sh  setup_https.sh  tailwind.config.ts  (+5 more)
EA/: AlphaOS_Executor.mq5
ai-engine/: ANALYSIS_REPORT.md  Dockerfile  IMPLEMENTATION_NOTES.md  TRAINING_QUALITY_REPORT.md  TRAINING_REPORT.md  ai_log.txt  alphaos.md  analyze_data.py  auto_learner.py  backtest_model.py  calculate_counterfactual_mfe.py  collect_continuous_data.py  create_market_scans.py  docker_entrypoint.sh  enhance_features.py  export_training_data.py  generate_labels.py  inspect_data.py  label_data.py  monitor_resources.py  requirements.txt  run_ai.sh  schema.sql  setup_local.sh  train_filter.py  train_scanner.py  verify_ingest.py
alpha-link-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
configs/: secrets.yaml.template
db/: apply_fix.py
docs/: AI_MODEL_OPTIMIZATION_PLAN.md  AI交易系统研究指南生成.md  ALPHAOS_ARCHITECTURE_V2.md  CHANGELOG.md  CLEANUP_VERIFICATION.md  CODE_CLEANUP_SUMMARY.md  COUNTERFACTUAL_MFE_PLAN.md  COUNTERFACTUAL_MFE_SUCCESS.md  Current_Issues.md  DATABASE_README.md  DATA_COLLECTION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_LOG.md  EA 盈利因子低分析.md  KELLY_HFT_OPTIMIZATION.md  KELLY_LOT_SIZE_FIX.md  M2 Pro 量子回归训练指南.md  MODEL_PERSISTENCE_ISSUE.md  MT5 交易系统生产级落地方案.MD  PROJECT_CLEANUP.md  QUANTUM_TRADING_SYSTEM_MASTER_MANUAL.md  QuantumNet 数据采集.MD  SESSION_SUMMARY_2025-12-12.md  SIGNAL_SYSTEM.md  XAUUSD 高频量子交易系统方案*.md  XAUUSD_Quantum_Strategic_Research.md  交易系统前端功能设计.MD  交易风控离场策略研究.md  量子计算生产环境方案.md
quantum-engine/: README.md  requirements.txt  verify_symmetry.py
scripts/: analyze_data.py  apply_schema.sh  health_check.sh  inspect_cloud.py  migrate_from_cloud.py  migrate_runtime_state_time.sql  preprocess_data.py  start_live.sh  start_training.sh  test_v4_training.py
src/: env.ts
ui/: index.html  package.json  (+4 more)
(+322 files in other folders)
