[project]
name = "alphaos"
version = "4.0.0"
description = "AlphaOS v4 - Microstructure LNN Trading System for XAU/USD"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "AlphaOS Team" }
]
keywords = ["trading", "lnn", "microstructure", "hft", "mt5"]

dependencies = [
    # Deep Learning
    "torch>=2.1.0",
    "ncps>=0.0.7",  # Neural Circuit Policies (CfC)
    # Machine Learning
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    # Data Processing
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",  # Fast CSV/Parquet I/O
    "numpy>=1.26.0",
    "numba>=0.58.0",    # JIT compilation for numerical code
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "clickhouse-connect>=0.7.0",  # ClickHouse driver
    # Communication
    "pyzmq>=25.0.0",
    "websockets>=12.0",  # WebSocket server for frontend push
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.0",  # YAML config support
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    # Utilities
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",  # Pretty console output
    # M2 Pro Optimization (Phase 1-4)
    "optuna>=3.5.0",  # Bayesian hyperparameter tuning
    "onnx>=1.15.0",  # ONNX model export
    "onnxruntime>=1.17.0",  # ONNX inference runtime
    "h5py>=3.10.0",  # HDF5 for memory-efficient large dataset handling
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "greenlet>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
]

[project.scripts]
# v4 CLI
alphaos-v4-train = "alphaos.v4.cli:train_v4"
alphaos-v4-serve = "alphaos.v4.cli:serve_v4"
alphaos-v4-backtest = "alphaos.v4.cli:backtest_v4"
alphaos-v4-convert = "alphaos.v4.cli:convert_csv_to_parquet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
